Migrate to Slick for DB mapping.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,13 +14,14 @@ db {
   url = ${?MARS_DB_URL}  // this will look for the url value in the system's enviroment variable. If it's not set, it will use the deafult value.
   user = ""
   user = ${?MARS_DB_USER}
-  passwd = ""
-  passwd = ${?MARS_DB_PASSWORD}
+  password = ""
+  password = ${?MARS_DB_PASSWORD}
   driver = "org.postgresql.Driver"
   driver = ${?MARS_DB_DRIVER}
   keepAliveConnection = true
   connectionTimeout = 5000
   validationTimeout = 5000
+  parallelism=6
 }
 
 service {
