--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -8,13 +8,15 @@ http {
 }
 
 db {
-  url = "jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1"
-  user = ""
-  passwd = ""
+  url = "jdbc:h2:mem:test;MODE=PostgreSQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1"
+  user = "sa"
+  password = ""
   driver = "org.h2.Driver"
+  connectionPool = disabled
   keepAliveConnection = true
   connectionTimeout = 5000
   validationTimeout = 5000
+  parallelism=1
 }
 
 service {
