Implement time sheet generator.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,6 +32,12 @@ service {
     ttl-in-sec = 30
     ttl-in-sec = ${?MARS_REG_UUID_TTL_SEC}
   }
+
+  timesheet {
+    // Path to the directory where the system will save the generated timesheets.
+    dir = "./timesheets"
+    dir = ${?MARS_TIMESHEET_DIR}
+  }
 }
 
 akka.http {
