Implement email sender

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,30 @@ db {
   parallelism=6
 }
 
+email {
+
+  addr = "utamars2015@gmail.com"
+  addr = ${?MARS_EMAIL_ADDR}
+
+  // The host that will send the email.
+  // google ex: smtp.gmail.com
+  // Amazon SES ex: email-smtp.us-west-2.amazonaws.com
+  host = "email-smtp.us-west-2.amazonaws.com"
+  host = ${?MARS_EMAIL_HOST}
+  port = 587
+  port = ${?MARS_EMAIL_PORT}
+
+  // If using google as host, this field will be the same as the 'addr' field above.
+  // For amazon SES, see http://docs.aws.amazon.com/ses/latest/DeveloperGuide/smtp-credentials.html.
+  SMTP-user = ""
+  SMTP-user = ${?MARS_EMAIL_SMTP_USER}
+
+  // If using google as host, this is the password of the email addr.
+  // For amazon SES, see http://docs.aws.amazon.com/ses/latest/DeveloperGuide/smtp-credentials.html.
+  SMTP-password = ""
+  SMTP-password = ${?MARS_EMAIL_SMTP_PASSWORD}
+}
+
 service {
 
   registerUUID {
