--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,11 +10,11 @@ http {
 
 db {
   create = false
-  url = "jdbc:postgresql://localhost:5432/postgres"  // default value
+  url = "jdbc:postgresql://52.33.35.165:5432/postgres"  // default value
   url = ${?MARS_DB_URL}  // this will look for the url value in the system's enviroment variable. If it's not set, it will use the deafult value.
-  user = ""
+  user = "power_user"
   user = ${?MARS_DB_USER}
-  password = ""
+  password = "38H3huKX"
   password = ${?MARS_DB_PASSWORD}
   driver = "org.postgresql.Driver"
   driver = ${?MARS_DB_DRIVER}
