Update tables to support facial recognition.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka {
 }
 
 http {
-  interface = "0.0.0.0"
+  addr = "localhost"
   port = 8080
 }
 
@@ -12,9 +12,9 @@ db {
   create = false
   url = "jdbc:postgresql://52.33.35.165:5432/postgres"  // default value
   url = ${?MARS_DB_URL}  // this will look for the url value in the system's enviroment variable. If it's not set, it will use the deafult value.
-  user = "power_user"
+  user = ""
   user = ${?MARS_DB_USER}
-  password = "38H3huKX"
+  password = ""
   password = ${?MARS_DB_PASSWORD}
   driver = "org.postgresql.Driver"
   driver = ${?MARS_DB_DRIVER}
@@ -62,6 +62,20 @@ service {
     dir = "./timesheets"
     dir = ${?MARS_TIMESHEET_DIR}
   }
+
+  face-recognition {
+    // Path to the directory where face images will be saved and fetched.
+    dir = "./faces"
+    dir = ${?MARS_FACES_DIR}
+  }
+}
+
+// face++; http://www.faceplusplus.com/api-overview/
+facepp {
+  key = ""
+  key = ${?MARS_FACEPP_KEY}
+  secret = ""
+  secret = ${?MARS_FACEPP_SECRET}
 }
 
 akka.http {
