Specify public and private address

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,8 +4,12 @@ akka {
 }
 
 http {
-  addr = "localhost"
+  addr.private = "localhost"
+  addr.private = ${?MARS_PRIVATE_ADDR}
+  addr.public = "52.33.35.165"
+  addr.public = ${?MARS_PUBLIC_ADDR}
   port = 8080
+  port = ${?MARS_PORT}
 }
 
 db {
