--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -108,7 +108,7 @@ akka.http {
 
     # Enables/disables the addition of a `Remote-Address` header
     # holding the clients (remote) IP address.
-    remote-address-header = off
+    remote-address-header = on
 
     # Enables/disables the addition of a `Raw-Request-URI` header holding the
     # original raw request URI as the client has sent it.
