More detailed config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,10 @@
+# Example of defining config value
+#
+# This will look for the url value in the system's enviroment variable under 'MARS_SOME_URL'.
+# If it's not set, it will use the deafult value.
+// url = "someurl.com"      # default value
+// url = ${?MARS_SOME_URL}
+
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "INFO"
@@ -6,22 +13,37 @@ akka {
 http {
   addr.private = "localhost"
   addr.private = ${?MARS_PRIVATE_ADDR}
-  addr.public = "52.33.35.165"
+
+  // public IP address or domain name if avaliable.
+  // Need this so this system can serve assets such as images.
+  addr.public = ""
   addr.public = ${?MARS_PUBLIC_ADDR}
-  port = 8080
+
+  port = 80
   port = ${?MARS_PORT}
 }
 
 db {
+  // create the DB schema on startup
   create = false
-  url = "jdbc:postgresql://52.33.35.165:5432/postgres"  // default value
-  url = ${?MARS_DB_URL}  // this will look for the url value in the system's enviroment variable. If it's not set, it will use the deafult value.
+
+  // If the DB and this system are not running on the same machine, replace
+  // localhost inside the url with IP addr or domain name where the DB is running on.
+  url = "jdbc:postgresql://localhost:5432/postgres"
+  url = ${?MARS_DB_URL}
+
+  // DB username
   user = ""
   user = ${?MARS_DB_USER}
+
+  // DB password
   password = ""
   password = ${?MARS_DB_PASSWORD}
+
+  // only support "org.postgresql.Driver" or "org.h2.Driver"
   driver = "org.postgresql.Driver"
   driver = ${?MARS_DB_DRIVER}
+
   keepAliveConnection = true
   connectionTimeout = 5000
   validationTimeout = 5000
@@ -29,11 +51,15 @@ db {
 }
 
 email {
-
-  addr = "utamars2015@gmail.com"
+  // The email address this system will use to email notifications and time sheets.
+  addr = ""
   addr = ${?MARS_EMAIL_ADDR}
 
   // The host that will send the email.
+  // Beware of Gmail 24-hours sending limit (https://support.google.com/a/answer/166852?hl=en).
+  // For large user base, consider using Amazon SES or something similar instead.
+  // Note that you can use a gmail accout with Amazon SES.
+  //
   // google ex: smtp.gmail.com
   // Amazon SES ex: email-smtp.us-west-2.amazonaws.com
   host = "email-smtp.us-west-2.amazonaws.com"
@@ -56,7 +82,7 @@ service {
 
   registerUUID {
     // The Time To Live for registered UUIDs. In other words, how long
-    // before they will expire.
+    // before they will expire. Used in QR code generator.
     ttl-in-sec = 30
     ttl-in-sec = ${?MARS_REG_UUID_TTL_SEC}
   }
@@ -74,7 +100,9 @@ service {
   }
 }
 
-// face++; http://www.faceplusplus.com/api-overview/
+// This system uses face++ apis to do facial recognition (http://www.faceplusplus.com/api-overview/).
+// This requires signing up and getting an api key and secret.
+// 50,000 api calls per month. More details at http://www.faceplusplus.com/apilimit/
 facepp {
   key = ""
   key = ${?MARS_FACEPP_KEY}
